@@ -1,5 +1,6 @@
 <?php
 require_once("pages.php");
+require_once("style/include/style.php");
 $act = "glist";
 $ref = "$adminPath?a=$act";
 pageHeader();
@@ -7,9 +8,11 @@ pageHeader();
 if(isset($_REQUEST["purge"]) && !empty($_REQUEST["sel"]))
 {
   $list = array();
+  $sel = &$_REQUEST["sel"];
+  if(!is_array($sel)) $sel = array($sel);
 
   // purge immediately
-  foreach($_REQUEST["sel"] as $id)
+  foreach($sel as $id)
   {
     $sql = "SELECT * FROM grant WHERE id = " . $db->quote($id);
     $DATA = $db->query($sql)->fetch();
@@ -34,58 +37,104 @@ $sql = "SELECT g.*, u.name AS user FROM grant g"
 if(!$auth["admin"]) $sql .= " WHERE user_id = " . $auth["id"];
 $sql .= " ORDER BY (user_id <> " . $auth["id"] . "), user_id, time";
 
-echo "<form action=\"$ref\" method=\"post\"><ul>";
+?>
+<script type="text/javascript">
+  $(document).ready(function() { hideComments(); });
+</script>
+
+<form action="<?php echo $ref; ?>" method="post">
+  <table id="grants">
+    <tr>
+      <th><input class="element checkbox" type="checkbox" onclick="selectAll(this.checked);"/></th>
+      <th></th>
+      <th></th>
+      <th><?php echo T_("Grant"); ?></th>
+      <th><?php echo T_("Expiry"); ?></th>
+      <th><?php echo T_("Date"); ?> <img src="style/static/down.png"/></th>
+    </tr>
+<?php
 
 foreach($db->query($sql) as $DATA)
 {
   if(isGrantExpired($DATA)) continue;
 
   $our = ($DATA["user_id"] == $auth["id"]);
-  $class = ($our? "fileinfo": "fileinfo alien");
-  echo "<li class=\"$class\">";
+  $class = "file expanded " . $DATA['id'];
+  if(!$our) $class .= " alien";
+  echo "<tr class=\"$class\">";
+
+  // selection
+  echo "<td><input class=\"element checkbox\" type=\"checkbox\" name=\"sel[]\" value=\"" . $DATA['id'] . "\"/></td>";
+
+  // upload
+  echo "<td><a href=\"" . grantUrl($DATA) . "\">"
+    . "<img src=\"style/static/upload.png\"/></a></td>";
+
+  // delete
+  echo "<td><a href=\"$ref&purge&sel=" . $DATA['id'] . "\">"
+    . "<img src=\"style/static/cross.png\"/></a></td>";
 
   // name
-  echo "<span><input class=\"element checkbox\" type=\"checkbox\" name=\"sel[]\" value=\"" . $DATA['id'] . "\"/>";
-  echo "<label class=\"choice ticketid\"><a href=\"" . grantUrl($DATA) . "\">" . htmlEntUTF8($DATA["id"]) . "</a></label>";
-  if($DATA["cmt"]) echo "<p class=\"comment\">" . htmlEntUTF8($DATA["cmt"]) . "</p>";
-  echo "</span>";
+  echo "<td onclick=\"toggleComment('" . $DATA['id'] . "');\" "
+    . "class=\"filename\"><span class=\"ticketid\">"
+    . htmlEntUTF8($DATA['id']) . "</span>";
+  $maxLen = ($styleGrantMaxLen - strlen($DATA['id']) - 3);
+  if($DATA["cmt"] && $maxLen > 0)
+  {
+    echo ": <span class=\"comment\">";
+    echo htmlEntUTF8(truncAtWord($DATA["cmt"], $maxLen));
+    echo "</span>";
+  }
+  echo "</td>";
+
+  // expire
+  echo "<td>";
+  if($DATA["grant_expire"])
+    echo "In " . humanTime($DATA["grant_expire"] - time());
+  else
+    echo "<strong>" . T_("Never") . "</strong>";
+  echo "</td>";
+
+  // date
+  echo "<td>" . date("d/m/Y", $DATA["time"]) . "</td>";
+
+  echo "</tr>";
+  echo "<tr class=\"$class comment\">";
+  // note: css madness
+  for($i = 0; $i != 3; ++$i) echo "<td></td>";
+
+  // comment
+  echo "<td class=\"comment\">";
+  if($DATA["cmt"]) echo htmlEntUTF8($DATA["cmt"]);
+  echo "</td>";
 
   // parameters
-  echo "<div class=\"fileinfo\"><table>";
-  echo "<tr><th>" . T_("Date:") . " </th><td> " . date("d/m/Y", $DATA["time"]) . "</td></tr>";
+  echo "<td class=\"fileinfo\" colspan=\"2\"><table>";
+
+  // notify
+  echo "<tr><th>" . T_("Notify:") . " </th><td>";
+  $first = true;
+  foreach(getEMailAddrs($DATA['notify_email']) as $email)
+  {
+    if($first) $first = false;
+    else echo ", ";
+    echo "<a href=\"mailto:" . urlencode($email) . "\">" .
+      htmlEntUTF8($email) . "</a>";
+  }
+
+  // owner
   if(!$our)
     echo "<tr><th>" . T_("User:") . " </th><td>" . htmlEntUTF8($DATA["user"]) . "</td></tr>";
   if(isset($DATA['pass_md5']))
     echo "<tr><th>" . T_("Password:") . " </th><td>" . str_repeat("&bull;", 5) . "</td>";
 
-  // expire
-  echo "<tr><th>" . T_("Expiry:") . " </th><td>";
-  if($DATA["grant_expire"])
-    echo "In " . humanTime($DATA["grant_expire"] - time());
-  else
-    echo "<strong>" . T_("never") . "</strong>";
-  echo "</td></tr>";
-
-  // notify
-  if($DATA["notify_email"])
-  {
-    echo "<tr><th>" . T_("Notify:") . " </th><td>";
-    $first = true;
-    foreach(getEMailAddrs($DATA['notify_email']) as $email)
-    {
-      if($first) $first = false;
-      else echo ", ";
-      echo "<a href=\"mailto:" . urlencode($email) . "\">" .
-	htmlEntUTF8($email) . "</a>";
-    }
-    echo "</td></tr>";
-  }
-
-  echo "</table></div></li>";
+  echo "</table></td></tr>";
 }
 
 ?>
+  </table>
 
+  <ul>
     <li class="buttons">
       <input type="button" value="<?php echo T_("Reload"); ?>" onclick="document.location.reload();"/>
       <input type="reset" value="<?php echo T_("Reset"); ?>"/>
