@@ -1,0 +1,11 @@
+<?php
+/*
+ * Theme settings
+ */
+
+// Ticket name/comment maximum length in the listings
+$styleTicketMaxLen = 60;
+
+// Grant id/comment maximum length in the listings
+$styleGrantMaxLen = 90;
+?>
